
More detailed changelogs can be found at
<http://github.com/OpenGuides/OpenGuides>

0.81
        Trim leading/trailing whitespace from the fax field (so those of us
          using this field to store the Twitter username don't get broken
          links).

0.80    07 June 2015
        Fix calling CGI:param in a list context #85

0.79    31 May 2015
        Add search_content_munger_module option to allow munging of node
        content before indexing for search (Plucene and Lucy only).

0.78    01 March 2015
        Add support for the OpenGraph Protocol #77
        Add IRC metadata #80
        Remove the @RSS macro #33

0.77    20 September 2014
        Fix tests to work with more upto date versions of SQLite 
        Thanks to @jmdh and Niko Tyni. See PR #78 for more info.

0.76    08 December 2013
        Add facility to create custom macros and override existing ones.

0.75    23 November 2013
        Add a Lucy backend for searching.  This is still experimental,
          so we recommend most people stick with Plucene for now.
        If you do change to Lucy, you will need to reindex your entire guide
          (see examples/reindex.pl in the distribution).

0.74    19 July 2013
        Skip the correct number tests in t/210_json.t

0.73    17 July 2013
        Bump required version of Wiki::Toolkit::Plugin::JSON to remove
          deprecation warnings. 
        Node JSON output now contains image information.
        Node JSON output now includes raw and html formatted content.
        Add the external class to website and map links when
          displaying them in the metadata section of a node. 
        Add the @NODE_COUNT macro to count the number of nodes 
          in a category/locale.
        Allow passing Module::Build long options to Build.PL. Fixes #71.

0.72    28 June 2013
        Fix the date in json output. Fixes #5
        Allow a custom template, custom_auto_map_link.tt to populate
          map links in node metadata