@@ -7,6 +7,9 @@ More detailed changelogs can be found at
         Trim leading/trailing whitespace from the fax field (so those of us
           using this field to store the Twitter username don't get broken
           links).
+        Stop escaping commas in URLs generated by internal links, category
+          listings, locale listings, and Recent Changes (because these URLs
+          look ugly and escaping isn't necessary).
 
 0.80    07 June 2015
         Fix calling CGI:param in a list context #85
